--- a/.github/workflows/running.yml
+++ b/.github/workflows/running.yml
@@ -1,9 +1,14 @@
 name: Running code
 
 on:
+  pull_request:
+    branches:
+      - main
+
   push:
     branches:
       - main
+      - data_engineering
 
 jobs:
   check-reproducibility:
