--- a/.github/workflows/style.yml
+++ b/.github/workflows/style.yml
@@ -1,9 +1,14 @@
 name: Style check
 
 on:
+  pull_request:
+    branches:
+      - main
+
   push:
     branches:
       - main
+      - data_engineering
 
 jobs:
   flake8_py3:
