--- a/.github/workflows/running.yml
+++ b/.github/workflows/running.yml
@@ -26,4 +26,4 @@ jobs:
       - name: Run main.py
         id: run_main
         run: |
-          python3 main.py
+          python3 air-quality-forecast/main.py
