--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,6 @@
 notebooks/* linguist-vendored
 *.ipynb linguist-vendored
+*.py linguist-language=Python
+*.html linguist-vendored
 *.xgb filter=lfs diff=lfs merge=lfs -text
 *.pkl filter=lfs diff=lfs merge=lfs -text
