--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
       - name: Add remote 
         env:
           HF: ${{ secrets.HF }}
-        run: git remote add space https://03chrisk:$HF@huggingface.co/spaces/03chrisk/test2
+        run: git remote add space https://03chrisk:$HF@huggingface.co/spaces/03chrisk/air-quality-forecasting
       - name: Push to hub
         env:
           HF: ${{ secrets.HF }}
-        run: git push --force https://03chrisk:$HF@huggingface.co/spaces/03chrisk/test2 main
+        run: git push --force https://03chrisk:$HF@huggingface.co/spaces/03chrisk/air-quality-forecasting deploy:main
