--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,11 +13,10 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0
-      - name: Add remote 
-        env:
-          HF: ${{ secrets.HF }}
-        run: git remote add space https://03chrisk:$HF@huggingface.co/spaces/03chrisk/air-quality-forecasting
+      - name: Add remote
+        run: git remote add space https://huggingface.co/spaces/03chrisk/air-quality-forecasting
+
       - name: Push to hub
         env:
           HF: ${{ secrets.HF }}
-        run: git push --force https://03chrisk:$HF@huggingface.co/spaces/03chrisk/air-quality-forecasting deploy:main
+        run: git push --force https://03chrisk:${{ secrets.HF }}@huggingface.co/spaces/03chrisk/air-quality-forecasting deploy:main
