--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,14 +12,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - name: Set up Git user
-        run: |
-          git config --global user.name "atodorov284"
-          git config --global user.email "atodorov284@gmail.com"
       - name: Install Git LFS
         run: git lfs install
-      - name: Add remote 
-        run: git remote add space https://huggingface.co/spaces/03chrisk/air-quality-forecasting
+      - name: Sync history with LFS
+        run: git lfs migrate import --include="*.xgb, *.pkl" --yes --everything
       - name: Push to hub
         env:
           HF: ${{ secrets.HF }}
