rename VC_API_KEY to VC_KEY as it was like this in gh

--- a/.github/workflows/api_call.yml
+++ b/.github/workflows/api_call.yml
@@ -24,12 +24,12 @@ jobs:
 
       - name: Print API Key
         run: |
-          echo "API Key: $VC_API_KEY"
+          echo "API Key: $VC_KEY"
         env:
-          VC_API_KEY: ${{ secrets.VC_API_KEY }}
+          VC_KEY: ${{ secrets.VC_KEY }}
 
       - name: Run Python script
         env:
-          VC_API_KEY: ${{ secrets.VC_API_KEY }}
+          VC_KEY: ${{ secrets.VC_KEY }}
         run: |
           python air_quality_forecast/api_caller.py
