add lfs to try fixing model loading

--- a/.github/workflows/fetch_and_predict.yml
+++ b/.github/workflows/fetch_and_predict.yml
@@ -18,6 +18,9 @@ jobs:
         with:
           python-version: "3.x"
 
+      - name: Install Git LFS
+        run: git lfs install
+
       - name: Install dependencies
         run: |
           pip install -r requirements.txt
