--- a/.github/workflows/fetch_and_predict.yml
+++ b/.github/workflows/fetch_and_predict.yml
@@ -13,13 +13,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
+      - name: Install Git LFS
+        run: git lfs install
+
+      - name: Fetch LFS files
+        run: |
+          git lfs pull
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
           python-version: "3.x"
-
-      - name: Install Git LFS
-        run: git lfs install
 
       - name: Install dependencies
         run: |
