try uploading artifact from workflow

--- a/.github/workflows/fetch_and_predict.yml
+++ b/.github/workflows/fetch_and_predict.yml
@@ -40,3 +40,4 @@ jobs:
         with:
           name: current-prediction-data
           path: data/inference/current_prediction_data.csv
+          if-no-file: overwrite
