--- a/.github/workflows/fetch_and_predict.yml
+++ b/.github/workflows/fetch_and_predict.yml
@@ -35,9 +35,10 @@ jobs:
         run: |
           python air_quality_forecast/get_prediction_data.py
 
-      - name: Upload prediction CSV as an artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: current-prediction-data
-          path: data/inference/current_prediction_data.csv
-          if-no-file: overwrite
+      - name: Commit and push prediction CSV to repository
+        run: |
+          git config --local user.email "you@example.com"  # Replace with your email
+          git config --local user.name "Your Name"          # Replace with your name
+          git add data/inference/current_prediction_data.csv
+          git commit -m "Update prediction data" || echo "No changes to commit"
+          git push origin deploy
