refactor code and merge workflows

--- a/.github/workflows/predict_and_deploy.yml
+++ b/.github/workflows/predict_and_deploy.yml
@@ -1,16 +1,18 @@
-name: Fetch and Predict
+name: Fetch, Predict, and Sync to Hugging Face Hub
 
 on:
+  schedule:
+    - cron: "0 */6 * * *"
   push:
     branches:
       - deploy
 
 jobs:
-  build:
+  fetch-and-predict:
     runs-on: ubuntu-latest
 
     permissions:
-      contents: write # Grant permission to write to the repository
+      contents: write
 
     steps:
       - name: Checkout repository
@@ -40,8 +42,25 @@ jobs:
 
       - name: Commit and push prediction CSV to repository
         run: |
-          git config --local user.email "atodorov284@gmail.com"  # Replace with your email
-          git config --local user.name "Alex"          # Replace with your name
+          git config --local user.email "atodorov284@gmail.com"
+          git config --local user.name "Alex"
           git add data/inference/current_prediction_data.csv
           git commit -m "Update prediction data" || echo "No changes to commit"
           git push origin deploy
+
+  sync-to-hub:
+    runs-on: windows-latest
+    needs: fetch-and-predict # Ensures this job runs after fetch-and-predict
+
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Install Git LFS
+        run: git lfs install
+      - name: Sync history with LFS
+        run: git lfs migrate import --include="*.xgb, *.pkl" --yes --everything
+      - name: Push to hub
+        env:
+          HF: ${{ secrets.HF }}
+        run: git push --force https://03chrisk:${{ secrets.HF }}@huggingface.co/spaces/03chrisk/air-quality-forecasting deploy:main
