--- a/.github/workflows/predict_and_deploy.yml
+++ b/.github/workflows/predict_and_deploy.yml
@@ -45,6 +45,7 @@ jobs:
           git config --local user.email "atodorov284@gmail.com"
           git config --local user.name "Alex"
           git add data/inference/current_prediction_data.csv
+          git add data/inference/last_three_days.csv
           git commit -m "Update prediction data" || echo "No changes to commit"
           git push origin deploy
 
