--- a/.github/workflows/predict_and_deploy.yml
+++ b/.github/workflows/predict_and_deploy.yml
@@ -58,6 +58,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Git pull
+        run: git pull
       - name: Install Git LFS
         run: git lfs install
       - name: Sync history with LFS
